web/style.css
:root {
    --primary: 97;

    --dark: hsl(var(--primary), 80%, 5%);
    --darker: hsl(var(--primary), 40%, 15%);
    --darkish: hsl(var(--primary), 30%, 40%);
    --light: hsl(var(--primary), 20%, 90%);
    --lighter: hsl(var(--primary), 25%, 80%);
    --lightish: hsl(var(--primary), 30%, 70%);

    --background: var(--dark);
    --callout-background: var(--darker);
    --accents: var(--darkish);
    --text: var(--light);
    --muted: var(--lightish);

    --font-monospace: ui-monospace, "Cascadia Mono", "Segoe UI Mono", "Liberation Mono", Menlo, Monaco, Consolas, monospace;
    --font-serif: Georgia, serif;

    --font-xs: clamp(0.64rem, -0.34vw + 0.72rem, 0.56rem);
    --font-sm: clamp(0.8rem, -0.02vw + 0.8rem, 0.8rem);
    --font-md: clamp(1rem, 0.54vw + 0.86rem, 1.13rem);
    --font-lg: clamp(1.25rem, 1.48vw + 0.88rem, 1.59rem);
    --font-xl: clamp(1.56rem, 2.99vw + 0.82rem, 2.25rem);
    --font-2xl: clamp(1.95rem, 5.34vw + 0.62rem, 3.18rem);

    --space-2xs: 0.15rem;
}

html.light {
    --background: var(--light);
    --callout-background: var(--lighter);
    --accents: var(--lightish);
    --text: var(--dark);
    --muted: var(--darker);
}

*, *::before, *::after {
    box-sizing: border-box;
    margin: 0;
}

html {
    min-height: 100%;
    border: 0.75rem solid var(--muted);
    font-size: var(--font-md);
}

@media screen and (max-width: 768px) {
    html {
        border-width: 0.3rem;
    }
}

body {
    font-family: var(--font-serif);
    background-color: var(--background);
    color: var(--text);
    line-height: 1.6;
    font-weight: 200;
    padding-block: 2rem;
}

@media screen and (max-width: 768px) {
    body { margin: 0.65rem; }
}

::selection {
    background: var(--muted);
    color: var(--text);
}

hr {
    margin-block: 0;
    border: 0;
    height: 1px;
    width: 100%;
    background-color: var(--accents);
}

h1 {
    font-size: var(--font-xl);
}

h2 {
    font-size: var(--font-lg);
}

h1, h2, h3 { line-height: 1.2; }

h1, h2, h3, h4, h5, h6 {
    margin-block: 0;
    font-weight: 200;
}

b,
strong,
.bold {
    font-weight: 600;
}

a {
    color: currentColor;
    text-decoration: none;
    border-bottom: 1px solid var(--accents);
}

p, ul {
    margin-top: 0;
}

img {
    width: 100%;
    display: block;
}

ul[role="list"] {
    list-style: none;
    padding-left: 0;
}

blockquote {
    border-left: 1px solid var(--muted);
    margin-inline: 0;
    padding-inline: 40px;
    font-style: italic;
    padding-left: 1rem;
    padding-right: 0;
}

figure {
    margin-inline: 0;
}

figcaption {
    margin-top: 3px;
    color: var(--muted);
    font-size: var(--font-sm);
}

pre,
code,
.monospace {
    font-size: var(--font-sm);
    font-weight: 400;
    font-family: var(--font-monospace);
}

pre {
    background-color: var(--darker);
    color: var(--light);
    padding: 1rem;
    width: 100%;
    overflow-x: auto;
    tab-size: 2;
}

pre code {
    background: none;
    border-radius: 0;
    box-shadow: none;
    padding: 0;
}

code {
    background: var(--callout-background);
    box-shadow: 0 1px 0 var(--accents);
    border-radius: 2px;
    padding: 3px 4px;
}

button {
    appearance: none;
    border: none;
    background: none;
    font-family: inherit;
    color: currentColor;
    font-size: inherit;
}

.ml-sm { margin-left: 0.5rem; }
.ml-md { margin-left: 1rem; }
.mt-xs { margin-top: 0.25rem; }
.mt-sm { margin-top: 0.5rem; }
.mt-md { margin-top: 1rem; }
.mt-lg { margin-top: 2rem; }

.text-2xl { font-size: var(--font-2xl); line-height: 1.2; }
.text-xl { font-size: var(--font-xl); line-height: 1.2; }
.text-lg { font-size: var(--font-lg); line-height: 1.25; }
.text-md { font-size: var(--font-md); line-height: 1.4; }
.text-sm { font-size: var(--font-sm); }

.text-right { text-align: right; }

.flex { display: flex; }
.flex-1 { flex: 1; }
.inline-block { display: inline-block; }
.justify-start { justify-content: flex-start; }
.justify-between { justify-content: space-between; }
.align-center { align-items: center; }

.caps { text-transform: uppercase; }
.no-decoration {
    text-decoration: none;
    border-bottom: none;
}
.rounded {
    border-radius: 4px;
    overflow: hidden;
}

.container {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    max-width: 70ch;
    padding-left: 20px;
    padding-right: 20px;
}

.stack {
    --stack-spacing: 1rem;

    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.stack > * { width: 100%; }
.stack > * + * { margin-top: var(--stack-spacing); }
.stack[data-stack-size="lg"] { --stack-spacing: 2.5rem; }

.cluster {
    --cluster-spacing: 1rem;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-left: calc(-1 * var(--cluster-spacing));
}

.cluster > * { margin-left: var(--cluster-spacing); }
.cluster[data-cluster-size="2xs"] { --cluster-spacing: var(--space-2xs); }

.lightish { color: var(--muted); }
.darkish { color: var(--accents); }

.entry h2 {
    margin-top: 2rem;
}

.Posts,
.Books {
    background-color: var(--muted);
    color: var(--background);
    padding: 2rem;
    margin-inline: -2rem;
}

.Posts .lightish,
.Books .lightish {
    color: inherit;
}

:is(.Books, .Posts) a,
:is(.Books, .Posts) .link {
    border-color: var(--background);
}

